--- a/index.org
+++ b/index.org
@@ -78,6 +78,111 @@ Actually generate the section:
 
 
 #+RESULTS:
+** 2021-11-29 Emacs news
+  :PROPERTIES:
+  :EXPORT_ELEVENTY_PERMALINK: /blog/2021/11/2021-11-29-emacs-news/
+  :EXPORT_ELEVENTY_FILE_NAME: blog/2021/11/2021-11-29-emacs-news/
+  :EXPORT_DATE: 2021-11-29
+  :END:
+
+- Upcoming events:
+  - M-x Research (contact them for password): TBA https://m-x-research.github.io/ Fri Dec 3 0700 Vancouver / 0900 Chicago / 1000 Toronto / 1500 GMT / 1600 Berlin / 2030 Kolkata / 2300 Singapore
+  - Workshop: Creating and Saving Elisp Hyperlinks http://angg.twu.net/2021-workshop.html Sat Dec 4 1000 Vancouver / 1200 Chicago / 1300 Toronto / 1800 GMT / 1900 Berlin / 2330 Kolkata -- Sun Dec 5 0200 Singapore
+  - Emacs Paris (virtual, in French) https://www.emacs-doctor.com/emacs-paris-user-group/ Tue Dec 7 0830 Vancouver / 1030 Chicago / 1130 Toronto / 1630 GMT / 1730 Berlin / 2200 Kolkata -- Wed Dec 8 0030 Singapore
+- Beginner:
+  - [[https://www.youtube.com/watch?v=FpV8VzFVhMI][Emacs Bug Report How To 2021_11_26_06:48:55]] (04:57)
+  - [[https://www.youtube.com/watch?v=OY0fBVnc6QU][Hacker Tools AY 21/22 S 1: Emacs]] (01:23:22)
+  - [[https://www.youtube.com/watch?v=Dpfij8Y_q10&feature=youtu.be][Emacs для начинающих. Мои shortcuts/ For beginners. My shortcuts]]
+- Emacs configuration:
+  - [[https://www.reddit.com/r/emacs/comments/qzlzm0/what_are_your_top_key_bindings_rebindings_minor/][What are your top key bindings/ rebindings / minor modes for speed and efficiency (text work, notes)]]
+  - [[https://www.youtube.com/watch?v=8T6MnQ0gwF8&feature=youtu.be][Emacs Package Management]]
+  - [[https://shom.dev/posts/20211121_emacs-custom-configuration/][My Emacs custom configuration]]
+  - [[https://www.youtube.com/watch?v=2VpHr6sfLy0][System Crafters Live - I'm Rewriting My Configuration... Again]] (01:59:11)
+  - [[https://youtube.com/watch?v=8T6MnQ0gwF8&feature=share][Emacs Package Management Part I 2021_11_22_12:52:39]] ([[https://www.reddit.com/r/emacs/comments/qzhusb/emacs_package_management_part_i_2021_11_22_125239/][Reddit]])
+  - [[https://www.youtube.com/watch?v=UCJwchTEWeU][GNU Emacs #2 - Configurando e expandindo o Emacs]] (50:20)
+- Emacs Lisp:
+  - [[https://github.com/cjohansson/emacs-parser-generator][emacs-parser-generator: A parser-generator library for Emacs]] ([[https://www.reddit.com/r/planetemacs/comments/r4uw6c/emacsparsergenerator_a_parsergenerator_library/][Reddit]])
+  - [[https://www.youtube.com/watch?v=v2DQ4uFuDII][Xah Talk Show 2021-11-21 Emacs Lisp Coding, Video File Extension/Suffix, Midi]] (55:34)
+- Appearance:
+  - [[https://lars.ingebrigtsen.no/2021/11/24/the-most-controversial-change-in-emacs-history/][Lars Ingebrigtsen: The Most Controversial Change In Emacs History]]
+  - [[https://archive.casouri.cat/note/2021/fontset][Yuan Fu (casouri): Using Fontsets in Emacs]]
+- Navigation:
+  - [[https://www.youtube.com/watch?v=1C9GbmIP1EA][Getting Evil (aka Vim keys) in Emacs without Doom Emacs]] (17:56, [[https://www.reddit.com/r/emacs/comments/r1zzr8/a_basic_evilvim_keys_setup_without_doom_emacs/][Reddit]])
+  - [[https://i.redd.it/ys094xw1sk281.gif][A demonstration GIF from meow, 1.0.0 released!]] ([[https://www.reddit.com/r/emacs/comments/r51rif/a_demonstration_gif_from_meow_100_released/][Reddit]])
+  - [[https://github.com/jsilve24/framemove][framemove: Directional frame selection routines]]
+  - [[https://www.youtube.com/watch?v=SNdafvNxfVI][Introduction to Emacs: Editing Files and Editing in Multiple Buffers]] (05:27)
+  - [[https://github.com/mickeynp/combobulate][combobulate: Structured Editing and Navigation in Emacs]]
+- Org Mode:
+  - [[https://www.reddit.com/r/emacs/comments/r4cq3o/orgdown_the_new_name_for_the_syntax_of_orgmode/]["Orgdown", the new name for the syntax of Org-mode]] (proposal)
+  - [[https://emacstil.com/til/2021/11/29/org-emphasize-dwim/][Emacs TIL: Org emphasize DWIM]]
+  - [[https://emacstil.com/til/2021/11/26/make-org-emphasis-code-verbatim-bold-look-nicer/][Emacs TIL: Hide leading/trailing emphasis markers in Org mode]]
+  - [[https://www.youtube.com/watch?v=RULnMEedyNY][Emacs Hacking: creating graphviz trees from Org lists]] (01:35:39)
+- Completion:
+  - [[https://emacsredux.com/blog/2021/11/25/redo-complex-command-with-consult/][Emacs Redux: Redo Complex Command with Consult]]
+  - [[https://www.reddit.com/r/emacs/comments/r09uzc/vertico_orderless_marginalia_consult_i_tried_it/][vertico, orderless, marginalia, consult: I tried it out of interest.]]
+- Coding:
+  - [[https://gitlab.com/ideasman42/emacs-doc-show-inline][[RFC] doc-show-inline package (show C/C++ doc-strings inline)]]
+  - [[https://metaredux.com/posts/2021/11/24/an-update-on-cider-1-2.html][Meta Redux: An Update on CIDER 1.2]]
+  - [[https://www.masteringemacs.org/article/tree-sitter-complications-of-parsing-languages][Tree Sitter and the Complications of Parsing Languages]] ([[https://www.reddit.com/r/emacs/comments/r0i031/tree_sitter_and_the_complications_of_parsing/][Reddit]])
+  - [[https://www.youtube.com/watch?v=MXF81Q0a91M][Writing a Python script in Emacs in 45 minutes!]] (18:57)
+  - [[https://v.redd.it/o2owttqwld281][Emacs bends again (for snapshot testing)]] ([[https://www.reddit.com/r/emacs/comments/r4a9rm/emacs_bends_again_for_snapshot_testing/][Reddit]])
+  - [[https://www.reddit.com/r/emacs/comments/r4rc53/pcb_design_in_gnu_emacs_fancy_fonts_on_silkscreen/][PCB Design in GNU Emacs (Fancy fonts on Silkscreen)]]
+  - [[https://www.reddit.com/r/emacs/comments/r1smtm/pcb_design_in_gnu_emacs_3d_model/][PCB Design in GNU Emacs (3D model)]]
+  - Version control:
+    - [[https://www.youtube.com/watch?v=b6vm6g9fuZA&feature=youtu.be][Git Popup Info On Emacs]]
+    - [[https://www.manueluberti.eu//emacs/2021/11/27/vc/][Manuel Uberti: A job for VC]]
+    - [[https://www.manueluberti.eu//emacs/2021/11/29/vc-stashing/][Manuel Uberti: Stashing with VC]]
+    - [[https://www.youtube.com/watch?v=f_xMuOK0FuQ][@rae: How emacs makes merging ridiculously easy]] (13:26)
+    - [[https://takeonrules.com/2021/11/25/adding-emacs-function-for-my-forem-pull-requests/][Jeremy Friesen: Adding Emacs Function for my Forem Pull Requests]] ([[https://www.reddit.com/r/planetemacs/comments/r299cr/jeremy_friesen_adding_emacs_function_for_my_forem/][Reddit]])
+    - [[https://www.youtube.com/watch?v=yKqu44bmpUw][Emacs Sign Git Commit In Magit 2021_11_21 07:17:00]] (03:28)
+    - [[https://www.reddit.com/r/emacs/comments/r3ko3x/new_release_gitlab_support_in_code_review/][[New Release] Gitlab support in Code Review]]
+- Shells:
+  - [[https://www.youtube.com/watch?v=RhYNu6i_uY4&feature=youtu.be][Introduction to EShell]]
+- Math:
+  - [[https://www.reddit.com/r/emacs/comments/r0a3rr/formula_editor_in_gnu_emacs_update/][Formula Editor in GNU Emacs (Update)]]
+- Doom Emacs:
+  - [[https://emacstil.com/til/2021/11/22/doom-emacs-how-to-fold-code-blocks/][Emacs TIL: Doom Emacs: How to fold code blocks]]
+- Community:
+  - [[https://batsov.com/articles/2021/11/24/emacs-is-a-lifestyle/][Bozhidar Batsov: Emacs is a Lifestyle]]
+  - [[https://alexschroeder.ch/wiki/2021-11-27_Emacs_as_a_way_of_life][Alex Schroeder: Emacs as a way of life]]
+  - [[https://www.reddit.com/r/emacs/comments/r4wc1d/what_are_the_features_that_you_think_emacs_needs/][What are the features that you think emacs needs?]]
+  - [[https://bzg.fr/en/how-to-help-gnu-emacs-maintainers/][How to help GNU Emacs maintainers?]]
+  - [[https://karthinks.com/software/batteries-included-with-emacs/][Batteries included with Emacs | Karthinks]] (2020, [[https://news.ycombinator.com/item?id=29342176][HN]])
+  - [[https://www.youtube.com/watch?v=RC5yGM8fk8g][Lex Fridman and Neal Stephenson talking about Emacs]] ([[https://www.reddit.com/r/emacs/comments/r1s3k2/lex_fridman_and_neal_stephenson_talking_about/][Reddit]])
+  - [[https://gretzuni.com/articles/emacsconf2021-dialogic-learning-how-to-learn-through-the-emacs-tool][Gretzuni: Emacsconf2021: Dialogic learning how to learn through the Emacs tool]]
+  - [[https://gretzuni.com/articles/emacsconf2021-a-few-talks-i-can-t-wait-to-watch][Gretzuni: EmacsConf2021: A few talks I can't wait to watch]]
+- Other:
+  - [[https://www.emacsdocs.org][Introducing Emacs Docs: The modern documentation website for Emacs you didn't know you wanted!]] ([[https://www.reddit.com/r/emacs/comments/r57gaz/introducing_emacs_docs_the_modern_documentation/][Reddit]])
+  - [[https://www.olivertaylor.net/emacs/quick-help.html][Quick Help: Emacs as a Text Productivity Platform]] ([[https://www.reddit.com/r/emacs/comments/r2gz3i/quick_help_emacs_as_a_text_productivity_platform/][Reddit]])
+  - [[https://emacsredux.com/blog/2021/11/24/redo-complex-command/][Redo Complex Command]] ([[https://www.reddit.com/r/emacs/comments/r164h8/redo_complex_command/][Reddit]])
+  - [[https://www.youtube.com/watch?v=m9tDf3pB2RA][Pdf Viewing Inside Emacs 2021_11_21_21:08:32]] (04:25)
+  - [[https://www.youtube.com/watch?v=u762RxmHEbc][Emacs Insert Date Time 2021_11_22_08:06:40]] (01:05)
+  - [[https://www.youtube.com/watch?v=M1txXPyAL6I][Yasnippet & Neotree on GNU/Emacs]] (10:49)
+  - [[https://www.youtube.com/watch?v=bh37zbefZk4][EmacsConf2021 - Emacs Application Framework: A 2021 Update]] ([[https://www.reddit.com/r/emacs/comments/r4m6ix/emacsconf2021_emacs_application_framework_a_2021/][Reddit]])
+  - [[https://emacspeak.blogspot.com/2021/11/announcing-emacspeak-550-calmdog.html][T. V. Raman: Announcing Emacspeak 55.0 (CalmDog)]]
+  - [[https://emacspeak.blogspot.com/2021/11/emacspeak-in-age-of-cloud-computing.html][T. V. Raman: Emacspeak In The Age Of Cloud Computing]]
+  - [[https://ag91.github.io/blog/2021/11/22/moldable-emacs-lets-make-english-easy-to-query/][Moldable Emacs: let's make English easy to query!]] ([[https://www.reddit.com/r/emacs/comments/qzwxd6/moldable_emacs_lets_make_english_easy_to_query/][Reddit]])
+  - [[https://www.hhyu.org/posts/emacs_clientserver/][How I run emacs in client/server mode under macOS]]
+  - [[https://github.com/nakkaya/emacsd][emacsd: A Docker image for running Emacs 28 --with-native-compilation]]
+- Emacs development:
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=0d2f184a1107a910c2ebadbff1a88be32391bbf6][project-kill-buffers can display list of buffers to kill]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=49422d2e6986d3ec161e194c73c38f2a7c4b3c64][Do not buttonize key bindings outside of *Help* buffers]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=57bb675cde25bc1b54d8eb8716b0024d5c1d5687][Add new face `gnus-header']]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=3f843b25dc96867043feebb1d928bde4a7a777a3][Add an intermediary face for mode lines: `mode-line-active']]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=5d6e1c749a669d33db2936b106ae41ce59473ea1][Move the precision pixel scrolling feature to pixel-scroll.el]] ([[https://www.reddit.com/r/emacs/comments/r3islt/move_the_precision_pixel_scrolling_feature_to/][Reddit]])
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=db3fbe884fb992376a6e00f2a051e5de9579df85][Add `better-pixel-scroll-mode']]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=fde9363a57d0d38d592122fe5ca01aaafd0afa52][Add new function 'add-display-text-property']]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=84bf9549860aae22931951d52b194b1fcfca1556][Use a proportional font for the mode line]]
+  - [[http://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=a13b437c81f1f2e54555e7281480ea7e8eee8753][Add support for the min-width display property]]
+- New packages:
+  - [[package:async-backup][async-backup]]: Backup on each save without freezing Emacs
+  - [[package:el-secretario][el-secretario]]: Unify all your inboxes with the Emacs secretary
+  - [[package:gh-notify][gh-notify]]: A veneer for Magit/Forge GitHub notifications
+  - [[package:github-dark-vscode-theme][github-dark-vscode-theme]]: The GitHub Dark Theme from Visual Studio Code
+  - [[package:pr-review][pr-review]]: Review github PR
+
+Links from [[https://www.reddit.com/r/emacs][reddit.com/r/emacs]], [[https://www.reddit.com/r/orgmode][r/orgmode]], [[https://www.reddit.com/r/spacemacs][r/spacemacs]], [[https://www.reddit.com/r/planetemacs][r/planetemacs]], [[https://hn.algolia.com/?query=emacs&sort=byDate&prefix&page=0&dateRange=all&type=story][Hacker News]], [[https://planet.emacslife.com][planet.emacslife.com]], [[https://www.youtube.com/playlist?list=PL4th0AZixyREOtvxDpdxC9oMuX7Ar7Sdt][YouTube]], [[http://git.savannah.gnu.org/cgit/emacs.git/log/etc/NEWS][the Emacs NEWS file]], [[https://emacslife.com/calendar/][Emacs Calendar]], [[http://lists.gnu.org/archive/html/emacs-devel/2021-11][emacs-devel]], and [[https://lemmy.ml/c/emacs][lemmy/c/emacs]].
+
 ** 2021-11-22 Emacs news
   :PROPERTIES:
   :EXPORT_ELEVENTY_PERMALINK: /blog/2021/11/2021-11-22-emacs-news/
@@ -23129,9 +23234,10 @@ above!
                   ("http://git.savannah.gnu.org/cgit/emacs.git/log/etc/NEWS" . "the Emacs NEWS file")
                   ("https://emacslife.com/calendar/" . "Emacs Calendar"))
                 ", ")
-     " and "
+     ", "
      (org-link-make-string (concat "http://lists.gnu.org/archive/html/emacs-devel/" (format-time-string "%Y-%m"))
                            "emacs-devel")
+     ", and " (org-link-make-string "https://lemmy.ml/c/emacs" "lemmy/c/emacs")
      ".")))
 #+end_src
 
