add HTML export as well

--- a/index.org
+++ b/index.org
@@ -45,7 +45,7 @@ SCHEDULED: <2022-01-31 Mon .+1w>
   :END:
 
   #+NAME: defs
-#+begin_src emacs-lisp :results none :noweb yes :eval never-export
+#+begin_src emacs-lisp :results none :noweb yes :eval never-export :exports none
   <<menu>>
   <<packages>>
   <<reddit>>
