--- a/index.org
+++ b/index.org
@@ -98,10 +98,13 @@ Actually generate the section:
     :EXPORT_DATE: 2023-12-11T19:26:35-0500
     :END:
 
+[2023-12-11 Mon] Update: added OrgMeetup on Wed Dec 13
+
 - Help wanted:
   - [[https://www.reddit.com/r/emacs/comments/18d8aqr/please_contribute_to_treesitter_based_javascript/][Please contribute to Tree-Sitter based JavaScript and TypeScript Modes in GNU Emacs core]]
   - [[https://lists.gnu.org/archive/html/emacs-devel/2023-12/msg00062.html][Plan of attack or division of labor for documenting cl-lib]]
 - Upcoming events:
+  - OrgMeetup (virtual) https://emacs.ch/@yantar92/111549860162341841 Wed Dec 13 0800 America/Vancouver - 1000 America/Chicago - 1100 America/Toronto - 1600 Etc/GMT - 1700 Europe/Berlin - 2130 Asia/Kolkata -- Thu Dec 14 0000 Asia/Singapore
   - EmacsSF (in person): Holiday Party for Parenthesis Lovers https://www.meetup.com/emacs-sf/events/297781144/ Wed Dec 13 1800 America/Los_Angeles
   - Mastering Emacs book club https://susam.net/maze/meet/mastering-emacs/ Fri Dec 15 1200 America/Vancouver - 1400 America/Chicago - 1500 America/Toronto - 2000 Etc/GMT - 2100 Europe/Berlin -- Sat Dec 16 0130 Asia/Kolkata - 0400 Asia/Singapore
   - Mastering Emacs book club https://susam.net/maze/meet/mastering-emacs/ Sat Dec 16 0200 America/Vancouver - 0400 America/Chicago - 0500 America/Toronto - 1000 Etc/GMT - 1100 Europe/Berlin - 1530 Asia/Kolkata - 1800 Asia/Singapore
