--- a/index.org
+++ b/index.org
@@ -98,6 +98,10 @@ Actually generate the section:
     :EXPORT_DATE: 2024-02-05T13:12:52-0500
     :END:
 
+#+begin_update
+[2024-02-05 Mon] Added link to org-link-github.
+#+end_update
+
 - Upcoming events:
   - Emacs Paris: S: Emacs workshop in Paris (IRL - Octo) https://emacs-doctor.com/ Tue Feb 6 1800 Europe/Paris
   - EmacsATX: Emacs Social https://www.meetup.com/emacsatx/events/298320311/ Wed Feb 7 1630 America/Vancouver - 1830 America/Chicago - 1930 America/Toronto -- Thu Feb 8 0030 Etc/GMT - 0130 Europe/Berlin - 0600 Asia/Kolkata - 0830 Asia/Singapore
