--- a/most-recent.org
+++ b/most-recent.org
@@ -1,7 +1,11 @@
-# Created 2024-02-05 Mon 14:54
+# Created 2024-02-05 Mon 15:20
 #+title: 2024-02-05 Emacs news
 #+date: 2024-02-05T13:12:52-0500
 #+author: Sacha Chua
+#+begin_update
+[2024-02-05 Mon]  Added link to org-link-github.
+#+end_update
+
 - Upcoming events:
   - Emacs Paris: S: Emacs workshop in Paris (IRL - Octo) https://emacs-doctor.com/ Tue Feb 6 1800 Europe/Paris
   - EmacsATX: Emacs Social https://www.meetup.com/emacsatx/events/298320311/ Wed Feb 7 1630 America/Vancouver - 1830 America/Chicago - 1930 America/Toronto -- Thu Feb 8 0030 Etc/GMT - 0130 Europe/Berlin - 0600 Asia/Kolkata - 0830 Asia/Singapore
@@ -36,6 +40,7 @@
   - [[https://maplet.bearblog.dev/my-emacs-org-mode-config-as-a-student/][My Emacs org-mode / org-roam config as a student | maplet]]
   - [[https://theinformed.life/2023/10/22/episode-125-karl-voit/][Karl Voit on Org Mode – The Informed Life]] (2023)
   - [[https://zzamboni.org/post/beautifying-org-mode-in-emacs/][Beautifying Org Mode in Emacs]] ([[https://www.reddit.com/r/emacs/comments/1aje6vt/beautifying_org_mode_in_emacs/][Reddit]])
+  - [[https://github.com/stefanv/org-link-github/][stefanv/org-link-github: Shorthand github links for org-mode]]
   - [[http://yitang.uk/2024/02/03/blog-in-emacs-work-with-images/][Yi Tang: Blog in Emacs - Work with Images]]
   - [[https://takeonrules.com/2024/01/31/adjusting-my-time-tracking-again/][Jeremy Friesen: Adjusting My Time Tracking Again]]
   - [[https://v.redd.it/yrop6oujdsfc1][org-merge-driver, a merge driver specialized for the Org syntax, looks really neat! Found on Worg but just wanted to share an instance of usage]] ([[https://www.reddit.com/r/orgmode/comments/1afj5sv/orgmergedriver_a_merge_driver_specialized_for_the/][Reddit]])
