--- a/most-recent.org
+++ b/most-recent.org
@@ -1,4 +1,4 @@
-# Created 2024-02-26 Mon 17:41
+# Created 2024-02-26 Mon 17:44
 #+title: 2024-02-26 Emacs news
 #+date: 2024-02-26T08:20:15-0500
 #+author: Sacha Chua
@@ -67,7 +67,7 @@
 - Mail, news, and chat:
   - [[https://github.com/djcb/mu/blob/master/NEWS.org][mu/mu4e release 1.12]] ([[https://www.reddit.com/r/emacs/comments/1ayxhk6/mumu4e_release_112/][Reddit]]) - speedups, message composition, query parser, folding, indexing, search
 - Multimedia:
-  - [[https://www.reddit.com/r/emacs/comments/1az1l50/how_to_play_media_on_emacs_linux_and_android/][How to play media on Emacs (Linux and Android) using MPV]]
+  - [[https://github.com/danijelcamdzic/dotemacs/#mpv][How to play media on Emacs (Linux and Android) using MPV]] ([[https://www.reddit.com/r/emacs/comments/1az1l50/how_to_play_media_on_emacs_linux_and_android/][Reddit]])
   - [[https://github.com/alphapapa/listen.el][listen.el: Audio/music player for Emacs]] ([[https://www.reddit.com/r/emacs/comments/1aw4ton/listenel_audiomusic_player_for_emacs/][Reddit]])
   - [[https://michal.sapka.me/emacs/watching-youtube-with-emacs/][Michal Sapka: Emacs: watching YouTube with Yeetube and mpv]]
 - AI:
