--- a/index.org
+++ b/index.org
@@ -109,7 +109,7 @@ Actually generate the section:
   - M-x Research: TBA https://m-x-research.github.io/ Wed Mar 20 0900 America/Vancouver - 1100 America/Chicago - 1200 America/Toronto - 1600 Etc/GMT - 1700 Europe/Berlin - 2130 Asia/Kolkata -- Thu Mar 21 0000 Asia/Singapore
   - Emacs APAC (virtual) https://emacs-apac.gitlab.io/ Sat Mar 23 0130 America/Vancouver - 0330 America/Chicago - 0430 America/Toronto - 0830 Etc/GMT - 0930 Europe/Berlin - 1400 Asia/Kolkata - 1630 Asia/Singapore - [[https://emacs-apac.gitlab.io/announcements/march-2024/][announcement]]
 - Emacs configuration:
-  - [[Noticed that GNU ELPA and NonGNU ELPA now have percentile ranks - @pkal@emacs.ch]]
+  - [[https://emacs.ch/@pkal/112071203615073146][Noticed that GNU ELPA and NonGNU ELPA now have percentile ranks - @pkal@emacs.ch]]
   - [[https://andreyor.st/posts/2024-03-05-accepting-your-own-solutions-to-your-own-problems/][Andrey Listopadov: Accepting your own solutions to your own problems]]
   - [[https://github.com/deadblackclover/clover/releases/tag/v1.3.0][deadblackclover's Emacs config update: updated theme, added emms and multiple-cursors]]
   - [[https://www.youtube.com/watch?v=KZA6tojsGfU][Xah Talk Show Ep541, emacs org-mode key, WolframLang tiling, plane curves, math]] (01:14:25)
