--- a/most-recent.org
+++ b/most-recent.org
@@ -1,4 +1,4 @@
-# Created 2024-03-18 Mon 18:38
+# Created 2024-03-18 Mon 19:28
 #+title: 2024-03-18 Emacs news
 #+date: 2024-03-18T09:27:33-0400
 #+author: Sacha Chua
@@ -98,12 +98,12 @@
   - [[https://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=f03f14165ed51148b72b431ac99c4a4829bb1a7f][* lisp/textmodes/flyspell.el (flyspell-check-changes): New user option.]]
   - [[https://git.savannah.gnu.org/cgit/emacs.git/commit/etc/NEWS?id=f6a27bc32d19727dfcbee65fb9894b53aec46c65][Add user option to disable JavaScript in xwidget webview]]
 - New packages:
-  - http://melpa.org/#/bril-mode: Major mode for Bril text format (MELPA)
-  - http://melpa.org/#/dired-auto-readme: Auto-display README file in Dired buffers (MELPA)
-  - http://melpa.org/#/dired-hist: Traverse Dired buffer history: back, forward (MELPA)
-  - http://melpa.org/#/elisa: Emacs Lisp Information System Assistant (MELPA)
+  - bril-mode: Major mode for Bril text format (MELPA)
+  - dired-auto-readme: Auto-display README file in Dired buffers (MELPA)
+  - dired-hist: Traverse Dired buffer history: back, forward (MELPA)
+  - elisa: Emacs Lisp Information System Assistant (MELPA)
   - https://elpa.gnu.org/packages/mpdired.html: A dired-like client for Music Player Daemon (GNU ELPA)
-  - http://melpa.org/#/sops: SOPS encrypt and decrypt without leaving the editor (MELPA)
-  - http://melpa.org/#/sqlite-mode-extras: Extensions for sqlite-mode (MELPA)
+  - sops: SOPS encrypt and decrypt without leaving the editor (MELPA)
+  - sqlite-mode-extras: Extensions for sqlite-mode (MELPA)
 
 Links from [[https://www.reddit.com/r/emacs][reddit.com/r/emacs]], [[https://www.reddit.com/r/orgmode][r/orgmode]], [[https://www.reddit.com/r/spacemacs][r/spacemacs]], [[https://www.reddit.com/r/planetemacs][r/planetemacs]], [[https://hn.algolia.com/?query=emacs&sort=byDate&prefix&page=0&dateRange=all&type=story][Hacker News]], [[https://lobste.rs/search?q=emacs&what=stories&order=newest][lobste.rs]], [[https://kbin.social/m/emacs/newest][kbin]], [[https://programming.dev/c/emacs?dataType=Post&page=1&sort=New][programming.dev]], [[https://lemmy.ml/c/emacs?dataType=Post&page=1&sort=New][lemmy]], [[https://communick.news/c/emacs?dataType=Post&page=1&sort=New][communick.news]], [[https://planet.emacslife.com][planet.emacslife.com]], [[https://www.youtube.com/playlist?list=PL4th0AZixyREOtvxDpdxC9oMuX7Ar7Sdt][YouTube]], [[http://git.savannah.gnu.org/cgit/emacs.git/log/etc/NEWS][the Emacs NEWS file]], [[https://emacslife.com/calendar/][Emacs Calendar]], and [[http://lists.gnu.org/archive/html/emacs-devel/2024-03][emacs-devel]]. Thanks to Andrés Ramírez for emacs-devel links. Do you have an Emacs-related link or announcement? Please e-mail me at [[mailto:sacha@sachachua.com][sacha@sachachua.com]]. Thank you!
