--- a/most-recent.org
+++ b/most-recent.org
@@ -1,4 +1,4 @@
-# Created 2025-11-03 Mon 23:05
+# Created 2025-11-03 Mon 23:24
 #+title: 2025-11-03 Emacs news
 #+date: 2025-11-03T18:21:39-0500
 #+author: Sacha Chua
@@ -12,7 +12,10 @@ The Emacs Carnival blog theme for November is [[https://donaldh.wtf/2025/10/emac
   - OrgMeetup (virtual) https://orgmode.org/worg/orgmeetup.html Wed Nov 12 0800 America/Vancouver - 1000 America/Chicago - 1100 America/Toronto - 1600 Etc/GMT - 1700 Europe/Berlin - 2130 Asia/Kolkata -- Thu Nov 13 0000 Asia/Singapore
   - Atelier Emacs Montpellier (in person) https://lebib.org/date/atelier-emacs Fri Nov 14 1800 Europe/Paris
   - EmacsSF (in person): coffee.el in SF https://www.meetup.com/emacs-sf/events/311801687/ Sat Nov 15 1100 America/Los_Angeles
+- Beginner:
+  - [[https://youtu.be/jHTc2tiXt8M][GNU Emacs do Zero - Episódio 01 - YouTube]] ([[https://hachyderm.io/@lobocode/115447041856007850][@lobocode@hachyderm.io]])
 - Emacs configuration:
+  - [[https://forge.arjenwiersma.nl/arjen/upiv/][arjen/upiv: Emacs package to insert custom variables into the use-package form with their current value. - Forge The Arjen: Beyond coding. We Forge.]] ([[https://fosstodon.org/@credmp/115464624732520706][@credmp@fosstodon.org]])
   - [[https://github.com/mujaxso/funmacs/releases/tag/v0.1.2][FunMacs version 0.1.2]] ([[https://www.reddit.com/r/emacs/comments/1ol22jl/funmacs_version_012/][Reddit]])
   - [[https://www.youtube.com/watch?v=6yLmEGIIwb0][Emacs For Writers Unit 8: Your First Configuration]] (06:56)
 - Emacs Lisp:
@@ -26,12 +29,15 @@ The Emacs Carnival blog theme for November is [[https://donaldh.wtf/2025/10/emac
 - Navigation:
   - [[http://yummymelon.com/devnull/announcing-casual-ediff.html][Charles Choi: Announcing Casual Ediff]] ([[https://www.reddit.com/r/emacs/comments/1ok0yf3/announcing_casual_ediff/][Reddit]], [[https://irreal.org/blog/?p=13375][Irreal]])
   - [[https://www.reddit.com/r/emacs/comments/1ohr4uy/tip_use_deletepair_to_change_surroundings_similar/][Tip: Use delete-pair to change surroundings similar to vim-surround, or to paste only the contents of surroundings]] ([[https://irreal.org/blog/?p=13371][Irreal]])
+- Writing:
+  - [[https://www.gnu.org/software/emacs/manual/html_node/emacs/Fill-Commands.html][Fill Commands (GNU Emacs Manual) - options for customizing]] ([[https://mamot.fr/@CyrilBrulebois/115459242487827207][@CyrilBrulebois@mamot.fr]])
 - Org Mode:
   - [[https://list.orgmode.org/87frax514c.fsf@localhost][[ANN] Contribute to Org mode during FSF40 hackathon [online], Nov 21-23, 2025]]
   - [[https://www.reddit.com/r/orgmode/comments/1ojnrq1/i_figured_it_out_text_highlighting/][Tip about using org-remark for text highlights]]
   - [[https://mahmoodsh.com/efficiently_parsing_org_files.html][efficiently parsing org-mode files]] ([[https://www.reddit.com/r/emacs/comments/1oky4hy/efficiently_parsing_orgmode_files/][Reddit]], [[https://irreal.org/blog/?p=13379][Irreal]])
   - [[https://donaldh.wtf/2025/10/emacs-carnival-2025-11-an-ode-to-org-babel/][Donald Hunter: Emacs Carnival 2025-11 — An Ode to Org Babel]]
-  - [[https://www.cyan.sh/blog/posts/org-babel-for-ttrpg-automation.html][Jakub Nowak: Org Babel for TTRPG Automation]]
+    - [[https://lukascbossert.de/posts/org-babel/][org-babel is ROOT]] ([[https://mastodon.social/@lukascbossert/115476665193363352][@lukascbossert@mastodon.social]])
+    - [[https://www.cyan.sh/blog/posts/org-babel-for-ttrpg-automation.html][Jakub Nowak: Org Babel for TTRPG Automation]]
   - [[https://mbork.pl/2025-10-27_Org_mode_burst_timer][Marcin Borkowski: Org mode burst timer]]
   - [[https://mbork.pl/2025-11-03_Beeminder_Org_timer][Marcin Borkowski: Beeminder Org timer]]
   - [[https://flandrew.srht.site/listful/sw-bash-append2org.html][Listful Andrew: Append2Org — Send your clipboard to an Org file as a subtree (Bash package)]]
@@ -53,11 +59,13 @@ The Emacs Carnival blog theme for November is [[https://donaldh.wtf/2025/10/emac
   - [[https://web.archive.org/web/20250313015843/https://robbmann.io/posts/006_emacs_2_python/][I found this helpful for getting going with Python, after frustrations with language servers]] (2022, [[https://www.reddit.com/r/emacs/comments/1olo6xv/i_found_this_helpful_for_getting_going_with/][Reddit]])
   - [[https://www.youtube.com/watch?v=WDVCmJNDhDw][Using Emacs and json-par-mode to navigate through records in a JSON file]] (00:47)
   - [[https://www.youtube.com/watch?v=1GVoHtZjGlw][Quick Git Tip Using Magit Inside Emacs 2025_11_04_02:55:35 - YouTube]]
+  - [[https://todon.nl/@mousebot/115463444150986628][forgejo client fj.el 0.28: display attachments as links, add attachments, download]]
 - Mail, news, and chat:
   - [[https://bobonmedicaldevicesoftware.com/blog/2025/10/27/elfeed-curate-update-two-new-features][Elfeed Curate Update: Two new features]] ([[https://www.reddit.com/r/emacs/comments/1ohh5c1/elfeed_curate_update_two_new_features/][Reddit]])
 - Multimedia:
   - [[https://www.youtube.com/watch?v=gimjJH73wxI][Writing Music in Emacs - YouTube]] (2020)
 - AI:
+  - [[https://xenodium.com/agent-shell-016-improvements-melpa][agent-shell 0.17 improvements + MELPA: OpenCode and Gwen Code, send files, send screenshots, and lots more]] ([[https://indieweb.social/@xenodium/115487924631996064][@xenodium@indieweb.social]])
   - [[https://github.com/laurynas-biveinis/org-mcp/][org-mcp: an MCP server allowing LLMs to work with Org items]] ([[https://www.reddit.com/r/emacs/comments/1ok16yq/orgmcp_an_mcp_server_allowing_llms_to_work_with/][Reddit]]
 - Community:
   - [[https://taonaw.com/2025/10/27/emacs-and-mental-challanges.html][TAONAW - Emacs and Org Mode: Emacs and mental challenges]] ([[https://irreal.org/blog/?p=13377][Irreal]])
@@ -68,6 +76,7 @@ The Emacs Carnival blog theme for November is [[https://donaldh.wtf/2025/10/emac
   - [[https://christiantietze.de/posts/2025/10/sharpening-the-saw-with-emacs/][Sharpening the Saw with Emacs • Christian Tietze]] ([[https://irreal.org/blog/?p=13373][Irreal]])
   - [[https://protesilaos.com/codelog/2025-11-03-prot-asks-logan-fiction-conflict-escapism-life-lessons/][Protesilaos Stavrou: Prot Asks: Logan about fiction, conflict, escapism, and life lessons]]
 - Other:
+  - [[https://idiomdrottning.org/on-top-of-emacs-god-mode][On top of Emacs' god-mode]] ([[https://mastodo.neoliber.al/@petes_bread_eqn_xls/115446968578651397][@petes_bread_eqn_xls@mastodo.neoliber.al]])
   - [[https://emacs.dyerdwelling.family/emacs/20251101152419-emacs--the-ping-localhost-hack-for-emacs-shell-on-windows/][James Dyer: The Ping Localhost Hack for Emacs Shell on Windows]]
   - [[https://flandrew.srht.site/listful/creating-emoji-flags-in-emacs-lisp-and-bash.html][Listful Andrew: Creating emoji flags in Emacs Lisp and Bash]]
   - [[https://github.com/thndrbrrr/gtasks][[ANN] gtasks.el - Google Tasks API wrapper for Emacs (MELPA, v0.2.2)]] ([[https://www.reddit.com/r/emacs/comments/1oiczye/ann_gtasksel_google_tasks_api_wrapper_for_emacs/][Reddit]])
